force-app/main/default/objects/UHT_Change_Log__c/UHT_Change_Log__c.object-meta.xml
<CustomObject>
    <label>UHT Change Log</label>
    <nameField>
        <displayFormat>UHT-{00000}</displayFormat>
        <label>UHT Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UHT Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>