force-app/main/default/objects/UHT_Change_Log__c/fields/Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Change_Timestamp__c</fullName>
    <label>Change Timestamp</label>
    <type>DateTime</type>
</CustomField>