force-app/main/default/objects/UHT_Change_Log__c/fields/Commit_Number__c.field-meta.xml
<CustomField>
    <fullName>Commit_Number__c</fullName>
    <label>Commit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>