force-app/main/default/objects/UHT_Change_Log__c/fields/Commit_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Commit_User_Id__c</fullName>
    <label>Commit User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>