force-app/main/default/objects/UHT_Change_Log__c/fields/Tracked_Field__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Field__c</fullName>
    <label>Tracked Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>