force-app/main/default/objects/UHT_Change_Log__c/fields/Tracked_Object__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Object__c</fullName>
    <label>Tracked Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>