force-app/main/default/objects/UHT_Change_Log__c/fields/Tracked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Record_Id__c</fullName>
    <label>Tracked Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>